--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plot,specification)
 export(Cache)
 export(Combine)
 export(ConstantReturn)
+export(CreateTree)
 export(FixedWeightIndex)
 export(GetData)
 export(Load)
@@ -25,4 +26,6 @@ importFrom(memoise,memoise)
 importFrom(memoise,timeout)
 importFrom(timeDate,isWeekday)
 importFrom(timeDate,timeSequence)
+importFrom(xts,xts)
 importFrom(yaml,yaml.load)
+importFrom(zoo,index)
