--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,10 +17,13 @@ importFrom(assertthat,assert_that)
 importFrom(data.tree,Clone)
 importFrom(data.tree,Do)
 importFrom(data.tree,FromListExplicit)
+importFrom(data.tree,FromListSimple)
+importFrom(data.tree,Get)
 importFrom(data.tree,GetDefaultTooltip)
 importFrom(data.tree,SetEdgeStyle)
 importFrom(data.tree,SetGraphStyle)
 importFrom(data.tree,SetNodeStyle)
+importFrom(data.tree,Traverse)
 importFrom(data.tree,isNotRoot)
 importFrom(memoise,memoise)
 importFrom(memoise,timeout)
