working on parameters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ importFrom(data.tree,Do)
 importFrom(data.tree,FromListExplicit)
 importFrom(data.tree,FromListSimple)
 importFrom(data.tree,Get)
+importFrom(data.tree,GetAttribute)
 importFrom(data.tree,GetDefaultTooltip)
 importFrom(data.tree,SetEdgeStyle)
 importFrom(data.tree,SetGraphStyle)
