--- a/inst/extdata/context1.yaml
+++ b/inst/extdata/context1.yaml
@@ -1,119 +1,118 @@
-modules:
-  NA handling: &NaHandling
-    type: pipe
-    Fill NAs:
+NA handling: &NaHandling
+  type: pipe
+  Fill NAs:
+    type: transformation
+    function: zoo::na.locf
+    arguments:
+      object: '@pipe'
+  NA Ratio:
+    type: warning
+    function: NaRatio
+    arguments:
+      timeseries: '@pipe'
+      variable: Close
+      maxRatio: 0.25
+Transformation: &QYPipe
+  type: pipe
+  Cache:
+    type: function
+    function: Cache
+    arguments:
+      f: '@pipefun'
+      timeout: 3600
+  Close:
+    type: transformation
+    function: magrittr::use_series
+    arguments:
+      a: '@pipe'
+      b: 'Close'
+  NAs: *NaHandling
+  Regularize:
       type: transformation
-      function: zoo::na.locf
+      function: Regularize
       arguments:
-        object: '@pipe'
-    NA Ratio:
-      type: warning
-      function: NaRatio
-      arguments:
-        timeseries: '@pipe'
-        variable: Close
-        maxRatio: 0.25
-  Transformation: &QYPipe
-    type: pipe
-    Cache:
-      type: function
-      function: Cache
-      arguments:
-        f: '@pipefun'
-        timeout: 3600
-    Close:
-      type: transformation
-      function: magrittr::use_series
-      arguments:
-        a: '@pipe'
-        b: 'Close'
-    NAs: *NaHandling
-    Regularize:
-        type: transformation
-        function: Regularize
-        arguments:
-          xts: '@pipe'
-    Combine:
-      type: junction
-      function: Combine
-      arguments:
-        listofxts: '@pipe'
-      Quandl:
-        type: pipe
-        MinLength:
-          type: error
-          function: MinLength
-          arguments:
-            timeseries: '@pipe'
-            minLength: 10
-        DownloadQuandl:
-          type: source
-          function: Quandl::Quandl
-          arguments:
-            code: "@quandlCode"
-            type: xts
-      Yahoo:
-        type: pipe
-        MinLength:
-          type: warning
-          function: MinLength
-          arguments:
-            timeseries: '@pipe'
-            minLength: 10
-        SetNames:
-          type: transformation
-          function: SetNames
-          arguments:
-            x: '@pipe'
-            names: [Open, High, Low, Close, Volume, 'Adjusted Close']
-          DownloadYahoo:
-            type: source
-            function: quantmod::getSymbols
-            arguments:
-              Symbols: "^GSPC"
-              auto.assign: FALSE
-data:
-  SPX:
-    type: tap
-    longname: "S&P 500 daily close"
-    description: |
-      Quandl, fill missing values with Yahoo.
-      Backfill weekends and holidays.
-      Cache for an hour.
-      Warn if newest value older than a day.
-    parameters:
-      dteRange: 1990-01-01/2010-01-01
-    variables:
-      series: Close
-      maxNaRatio: 0.25
-      yahooSymbol: "^GSPC"
-      quandlCode: "YAHOO/INDEX_GSPC"
-    Pipe:
+        xts: '@pipe'
+  Combine:
+    type: junction
+    function: Combine
+    arguments:
+      listofxts: '@pipe'
+    Quandl:
       type: pipe
-      DateRange:
-        type: transformation
-        function: magrittr::extract
+      MinLength:
+        type: error
+        function: MinLength
         arguments:
-          - '@pipe'
-          - '@dteRange'
-      QYPipe: *QYPipe
-  AAPL:
-    type: tap
-    longname: "apple"
-    description: |
-      Quandl, fill missing values with Yahoo.
-      Backfill weekends and holidays.
-      Cache for an hour.
-      Warn if newest value older than a day.
-    variables:
-      series: Close
-      maxNaRatio: 0.25
-      yahooSymbol: "AAPL"
-      quandlCode: "YAHOO/AAPL"
-    pipe: *QYPipe
+          timeseries: '@pipe'
+          minLength: 10
+      DownloadQuandl:
+        type: source
+        function: Quandl::Quandl
+        arguments:
+          code: "@quandlCode"
+          type: xts
+    Yahoo:
+      type: pipe
+      MinLength:
+        type: warning
+        function: MinLength
+        arguments:
+          timeseries: '@pipe'
+          minLength: 10
+      SetNames:
+        type: transformation
+        function: SetNames
+        arguments:
+          x: '@pipe'
+          names: [Open, High, Low, Close, Volume, 'Adjusted Close']
+        DownloadYahoo:
+          type: source
+          function: quantmod::getSymbols
+          arguments:
+            Symbols: "@yahooSymbol"
+            auto.assign: FALSE
+## taps
+SPX:
+  type: tap
+  longname: "S&P 500 daily close"
+  description: |
+    Quandl, fill missing values with Yahoo.
+    Backfill weekends and holidays.
+    Cache for an hour.
+    Warn if newest value older than a day.
+  parameters:
+    #parameterName: defaultArgument
+    dteRange: 1990-01-01/2010-01-01
+  variables:
+    #variableName: value
+    series: Close
+    maxNaRatio: 0.25
+    yahooSymbol: "^GSPC"
+    quandlCode: "YAHOO/INDEX_GSPC"
+  Pipe:
+    type: pipe
+    DateRange:
+      type: transformation
+      function: magrittr::extract
+      arguments:
+        - '@pipe'
+        - '@dteRange'
+    QYPipe: *QYPipe
+AAPL:
+  type: tap
+  longname: "apple"
+  description: |
+    Quandl, fill missing values with Yahoo.
+    Backfill weekends and holidays.
+    Cache for an hour.
+    Warn if newest value older than a day.
+  variables:
+    series: Close
+    maxNaRatio: 0.25
+    yahooSymbol: "AAPL"
+    quandlCode: "YAHOO/AAPL"
+  pipe: *QYPipe
 
 
-#TODO: inheritable args
-#TODO: anchors/modules
 
 
