--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,12 @@ export(Combine)
 export(ConstantReturn)
 export(CreateTree)
 export(FixedWeightIndex)
-export(GetData)
 export(Load)
 export(NaRatio)
 export(Ones)
 export(Regularize)
 export(SetNames)
+export(Tap)
 import(magrittr)
 importFrom(assertthat,assert_that)
 importFrom(data.tree,Clone)
@@ -21,6 +21,7 @@ importFrom(data.tree,FromListSimple)
 importFrom(data.tree,Get)
 importFrom(data.tree,GetAttribute)
 importFrom(data.tree,GetDefaultTooltip)
+importFrom(data.tree,Node)
 importFrom(data.tree,SetEdgeStyle)
 importFrom(data.tree,SetGraphStyle)
 importFrom(data.tree,SetNodeStyle)
